# convineplace

./: .gitignore  README.md  package.json
backend/: Cargo.toml
backend/src/: app.config.js  main.rs
backend/src/rooms/: room.js
backend/src/rooms/schema/: gameState.js
convineplace-frontend/: .gitignore  .prettierrc  package.json  svelte.config.js  tailwind.config.js
convineplace-frontend/src/: app.html
convineplace-frontend/src/lib/: canvas.js  canvas.svelte  devmenu.svelte  login.svelte  navbar.svelte  pixel.svelte  register.svelte  selector.svelte  signup.svelte  states.js  stats.js  supabase.js  websocket.js
convineplace-frontend/src/routes/: +layout.svelte  +page.svelte
frontend/convineplace-frontend/: package.json
test/: index.js  package.json
workflows/: workflow.drawio
