[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
tokio-rustls = "0.22"
rustls = "0.19"
tungstenite = "0.15"
futures-util = "0.3"
